--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-sqs-local",
+  "name": "serverless-elasticmq-local",
   "version": "1.0.1",
   "description": "Serverless sqs local plugin",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electblake/serverless-sqs-local.git"
+    "url": "git+https://github.com/electblake/serverless-elasticmq-local.git"
   },
   "keywords": [
     "serverless framework plugin",
@@ -30,9 +30,9 @@
   "author": "Blake E <electblake@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/electblake/serverless-sqs-local/issues"
+    "url": "https://github.com/electblake/serverless-elasticmq-local/issues"
   },
-  "homepage": "https://github.com/electblake/serverless-sqs-local#readme",
+  "homepage": "https://github.com/electblake/serverless-elasticmq-local#readme",
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.132",
