--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "serverless-elasticmq-local",
   "version": "1.0.3",
   "description": "Serverless sqs local plugin",
-  "main": "dist/index.js",
-  "types": "src/types.d.ts",
+  "main": "index.js",
+  "types": "src/plugin.ts",
   "scripts": {
     "test": "DEBUG=* jest",
-    "dev": "webpack --watch"
+    "build": "tsc",
+    "watch": "tsc --watch",
+    "lint": "tslint -c tslint.json 'plugin.ts' --fix",
+    "prepublish": "npm run build",
+    "precommit": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -34,12 +38,15 @@
   },
   "homepage": "https://github.com/electblake/serverless-elasticmq-local#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.1.0",
     "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.132",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "ts-jest": "^24.0.2"
   },
   "dependencies": {
     "lodash": "^4.17.11",
