--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "DEBUG=* jest",
     "build": "tsc",
     "watch": "tsc --watch",
-    "lint": "tslint -c tslint.json 'plugin.ts' --fix",
+    "lint": "tslint -c tslint.json 'src/plugin.ts' --fix",
     "prepublish": "npm run build",
     "precommit": "npm run lint"
   },
